static/css/core.css
 @import url(http://fonts.googleapis.com/css?family=Ubuntu:400,700); /* feel free to change this */

 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }

 html, body
 {
     padding: 0px;
     margin: 0px;
     font-family: 'Ubuntu', sans-serif;
     font-size: 100%;
     /*background: #E9E9E9;*/
	 background: #dddddd;
	 background-image: url('../images/background.png');
     min-width: 1250px;
 }

.navWrapper {

    width: 100%;
    float: left;

    background: rgba(156,156,156,1);
    background: -moz-linear-gradient(top, rgba(156,156,156,1) 0%, rgba(173,173,173,0) 100%);
    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(156,156,156,1)), color-stop(100%, rgba(173,173,173,0)));
    background: -webkit-linear-gradient(top, rgba(156,156,156,1) 0%, rgba(173,173,173,0) 100%);
    background: -o-linear-gradient(top, rgba(156,156,156,1) 0%, rgba(173,173,173,0) 100%);
    background: -ms-linear-gradient(top, rgba(156,156,156,1) 0%, rgba(173,173,173,0) 100%);
    background: linear-gradient(to bottom, rgba(156,156,156,1) 0%, rgba(173,173,173,0) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9c9c9c', endColorstr='#adadad', GradientType=0 );

}

.navContainer {
    padding-left: 5px;
    width: 1200px;
    margin: auto;
}

.navItemWrapper {
    float: left;
    font-size: 14pt;
    padding: 12px;
    margin: 2px;
	border-radius: 9px 9px 0px 0px;
}

.navItemWrapper:hover{
background: rgb(169,3,41);
background: -moz-linear-gradient(top,  rgba(255,12,12,1) 0%, rgba(173,173,173,0) 100%);
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,12,12,1)), color-stop(100%,rgba(173,173,173,0)));
background: -webkit-linear-gradient(top,  rgba(255,12,12,1) 0%,rgba(173,173,173,0) 100%);
background: -o-linear-gradient(top,  rgba(255,12,12,1) 0%,rgba(173,173,173,0) 100%);
background: -ms-linear-gradient(top,  rgba(255,12,12,1) 0%,rgba(173,173,173,0) 100%);
background: linear-gradient(to bottom,  rgba(255,12,12,1) 0%,rgba(173,173,173,0) 100%);
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0c0c', endColorstr='#adadad',GradientType=0 );
border-radius: 9px 9px 0px 0px;
}

.localNavWrapper {
    float: left;
    margin: 10px;
    padding: 20px;
    border: solid 1px;
    width: 150px;
}

.localNavItem {
    white-space: nowrap;
}

.pageContentWrapper {
    width: 1200px;
    margin: auto;
    border: solid 1px;
}

.pageContentHomePage {
    width: 1170px;
}

.pageContent {
    padding: 20px;
    margin: 10px;
    float: left;
    padding-top: 0px;
}

.pannel {
    border: solid 1px #777;
    color: #333;
    -webkit-box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.30);
    -moz-box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.30);
    box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.30);
    border-radius: 0px 8px 0px 8px;
    -moz-border-radius: 0px 8px 0px 8px;
    -webkit-border-radius: 0px 8px 0px 8px;
    background: #E9E9E9;
}

.pageContentDocs {
    width: 1000px;
}

.logo {
    float: left;
    padding: 10px;
    width: 125px;
    margin-top: -8px;
}

.logo img {
    width: 100px;
}

#errorPage {
    position:absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 40px;
}

.localNavContainer{
	border-left: solid 1px;
	padding-left: 5px;
	margin-left: -10px;
    float: left;
}

a{
	text-decoration: none;
	color: #444444;
}

a:hover{
	text-decoration: underline;
}

a:active{
	text-decoration: underline;
}

a:visited{
	text-decoration: none;
	color: #222222;
}


#main {
    float: left;
}
#command-of-day, #top-ten-commands{
    padding: 1em;
    border: 1px solid #e1e1e1;
    float: right;
    clear: right;
    width: 200px;
    margin: .5em;
}
#command-of-day h3, #top-ten-commands h3{
    color: #aaa;
}
#command-of-day h4{
    font-size: 1.2em;
}

#top-ten-commands ul li, #top-ten-commands a{
    list-style: none;
    text-decoration: none;
    color: black;
}

#top-ten-commands a:visited {
    color: purple;
}

#top-ten-commands a:hover{
    font-style: italic;
}


.searchResults {
    margin-top: 3px;
    background: #FFF;
    border-bottom: solid 1px #999;
    border-radius: 3px;
    width: 400px;
    position: absolute;
    top: 42px;
    box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.4);
    display: none;
}

.resultMessage {
    margin: 10px;
    color: #555;
}


.searchResult {
    margin: 5px;
    height: 65px;
    overflow: hidden;
    border-bottom: solid 1px #aaa;
    padding-bottom: 10px;
    margin-top: 3px;
}

.searchResult:hover {
    background: #F0F0F0;
}

.searchTitle {
    font-weight: bold;
    font-size: 12pt;
}

.searchDescription {
    font-size: 10pt;
    color: #555;
    overflow: hidden;
    padding: 5px;
    height: 40px;
    margin-left: 10px;
}


.searchResults a:hover{
    text-decoration: none;
}

#Search {
    float: right;
    width: 400px;
    margin-top: 18px;
    margin-right: 20px;
}

#searchField {
    float: right;
    width: 200px;
    border-radius: 2px;
    border: none;
    box-shadow: inset -1px 1px 4px 0px rgba(0,0,0,0.7);
    background: #F2F2F2;
    height: 24px;
    padding: 3px;
    -o-transition:.2s;
    -ms-transition:.2s;
    -moz-transition:.2s;
    -webkit-transition:.2s;
    transition:.2s;
}

#searchField:hover {
    background: #fff;
}

#searchField:focus {
    background: #fff;
    outline: none;
    width: 400px;
}

.selectedNavItem {
    font-weight: bold;
}

